# ai-spending-tracker

./: .gitignore  README.md  index.html  package-lock.json  package.json
ai-spending-tracker-backend/: .env.example  README.md  main.py  postman_collection.json  pyproject.toml  start.py
src/: App.tsx  index.css  main.tsx
src/app/: router.tsx
src/auth/: AuthContext.ts  AuthProvider.tsx  ProtectedRoute.tsx
src/components/forms/: CategoryChipGroup.tsx  LabeledInput.tsx
src/components/icons/: materialIconMap.tsx
src/components/layout/: AppTopBar.tsx  DesktopSideNav.tsx  MobileBottomNav.tsx  PageContainer.tsx  SectionHeader.tsx
src/components/transactions/: TransactionGroupList.tsx  TransactionList.tsx  TransactionRow.tsx
src/components/ui/: EmptyStateShimmer.tsx  FilterChip.tsx  GlassCard.tsx  IconBadge.tsx  MetricPill.tsx  PrimaryFab.tsx
src/config/: layout.ts  navigation.ts
src/data/mock/: dashboardApi.ts  futureScreens.ts  insightsApi.ts  transactionsApi.ts
src/data/selectors/: dashboardSelectors.ts  insightsSelectors.ts  transactionsSelectors.ts
src/lib/: apiConfig.ts  authenticatedFetch.ts  firebaseAuth.ts
src/pages/: About.tsx  AddSpendingPage.tsx  Home.tsx
src/pages/dashboard/: SpendingDashboardPage.tsx
src/pages/insights/: InsightsPage.tsx
src/pages/login/: LoginPage.tsx
src/pages/manual-entry/: ManualExpenseEntryPage.tsx
src/pages/scan/: ReceiptScanPage.tsx
src/pages/shared/: ComingSoonPage.tsx
src/theme/: AppThemeProvider.tsx  auraTheme.ts  auraTokens.ts
src/types/: domain.ts
src/utils/: formatters.ts  manualExpense.ts
(+4 files in other folders)
