[project]
name = "ai-spending-tracker-backend"
version = "0.1.0"
description = "FastAPI backend for the AI Spending Tracker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "firebase-admin>=7.4.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.32.0",
]

[tool.uv]
package = false
